[gd_scene load_steps=9 format=2]

[ext_resource path="res://InventoryLogic/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/button_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Images/Inventory UI/grabber.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Inventory UI/slider no boudaries.png" type="Texture" id=4]
[ext_resource path="res://Assets/Themes/options.tres" type="Theme" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 48, 8 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 48, 8 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 48, 8 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MusicLabel" type="Label" parent="."]
margin_left = 248.0
margin_top = 285.0
margin_right = 457.0
margin_bottom = 346.0
theme = ExtResource( 5 )
text = "Music vol."

[node name="SoundLabel" type="Label" parent="."]
margin_left = 248.0
margin_top = 365.0
margin_right = 498.0
margin_bottom = 430.0
theme = ExtResource( 5 )
text = "Sound vol."

[node name="AmbientLabel" type="Label" parent="."]
margin_left = 248.0
margin_top = 445.0
margin_right = 502.0
margin_bottom = 506.0
theme = ExtResource( 5 )
text = "Ambient vol."

[node name="FootstepLabel" type="Label" parent="."]
margin_left = 248.0
margin_top = 525.0
margin_right = 510.0
margin_bottom = 586.0
theme = ExtResource( 5 )
text = "Footstep vol."

[node name="Slider1" type="Control" parent="."]
margin_left = -11.0
margin_top = 270.0
margin_right = -11.0
margin_bottom = 270.0
rect_scale = Vector2( 4, 4 )

[node name="MusicSlider" type="HSlider" parent="Slider1"]
margin_right = 59.0
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )

[node name="LeftBoundary" type="TextureRect" parent="Slider1"]
margin_left = -4.25
margin_top = 3.75
margin_right = -0.25
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="RightBoundary" type="TextureRect" parent="Slider1"]
margin_left = 59.0
margin_top = 3.75
margin_right = 63.0
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="Slider2" type="Control" parent="."]
margin_left = -11.0
margin_top = 350.0
margin_right = -11.0
margin_bottom = 350.0
rect_scale = Vector2( 4, 4 )

[node name="SoundSlider" type="HSlider" parent="Slider2"]
margin_right = 59.0
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )

[node name="LeftBoundary" type="TextureRect" parent="Slider2"]
margin_left = -4.25
margin_top = 3.75
margin_right = -0.25
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="RightBoundary" type="TextureRect" parent="Slider2"]
margin_left = 59.0
margin_top = 3.75
margin_right = 63.0
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="Slider3" type="Control" parent="."]
margin_left = -11.0
margin_top = 430.0
margin_right = -11.0
margin_bottom = 430.0
rect_scale = Vector2( 4, 4 )

[node name="AmbientSlider" type="HSlider" parent="Slider3"]
margin_right = 59.0
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )

[node name="LeftBoundary" type="TextureRect" parent="Slider3"]
margin_left = -4.25
margin_top = 3.75
margin_right = -0.25
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="RightBoundary" type="TextureRect" parent="Slider3"]
margin_left = 59.0
margin_top = 3.75
margin_right = 63.0
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="Slider4" type="Control" parent="."]
margin_left = -11.0
margin_top = 510.0
margin_right = -11.0
margin_bottom = 510.0
rect_scale = Vector2( 4, 4 )

[node name="FootstepsSlider" type="HSlider" parent="Slider4"]
margin_right = 59.0
margin_bottom = 16.0
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )

[node name="LeftBoundary" type="TextureRect" parent="Slider4"]
margin_left = -4.25
margin_top = 3.75
margin_right = -0.25
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="RightBoundary" type="TextureRect" parent="Slider4"]
margin_left = 59.0
margin_top = 3.75
margin_right = 63.0
margin_bottom = 11.75
texture = ExtResource( 3 )

[node name="SoundTitle" type="Label" parent="."]
margin_left = -17.0
margin_top = 171.0
margin_right = 256.0
margin_bottom = 267.0
theme = ExtResource( 2 )
text = "SOUND:"

[connection signal="value_changed" from="Slider1/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Slider2/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Slider3/AmbientSlider" to="." method="_on_AmbientSlider_value_changed"]
[connection signal="value_changed" from="Slider4/FootstepsSlider" to="." method="_on_FootstepsSlider_value_changed"]
